@@ -75,6 +75,7 @@ from math import pi, cos, sin
 #-------------------------------------------------------------------------
 import Utils
 import FontScale
+import const
 
 #-------------------------------------------------------------------------
 #
